- I HATE VISUAL STUDIO - Fixed all Debug|Release SDL|SDL2 samples projects. - Fixed some uninitialized bugs on some samples with SDL2. - Fixed body destruction on box2d sample.

--- a/visual/vs2012/Sample_15_presentation2/Sample_15_presentation2.vcxproj.filters
+++ b/visual/vs2012/Sample_15_presentation2/Sample_15_presentation2.vcxproj.filters
@@ -7,10 +7,10 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\samples\05_joystick_input\pres_sample.cpp" />
-    <ClCompile Include="..\..\..\samples\05_joystick_input\main.cpp" />
+    <ClCompile Include="..\..\..\samples\15_presentation2\pres_sample.cpp" />
+    <ClCompile Include="..\..\..\samples\15_presentation2\main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\samples\05_joystick_input\pres_sample.h" />
+    <ClInclude Include="..\..\..\samples\15_presentation2\pres_sample.h" />
   </ItemGroup>
 </Project>
