--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,10 @@ tests/bin/tests
 /visual/vs2012/Sample_12_savesystem/Release/
 /visual/vs2012/Sample_13_gui_rocket/Release/
 /visual/vs2012/sample_07_music_sfx/Release/
+*.tlog/
+*.idb
+*.pdb
+*.obj
+*Debug SDL*
+*Release SDL*
+*.suo
