File cleanup Add ogl2 files to VS project Temp fix for color problem with SDL2 OGL2 Windows Set prefabs sample to use OpenGL 2.x default

--- a/samples/bin/prefabs_app.config
+++ b/samples/bin/prefabs_app.config
@@ -2,7 +2,7 @@
 	"bDebugSprite": false,
 	"bMultipleInstances": false,
 	"bWarningMultipleInstances": false,
-	"sRendererDevice": "OpenGL ES1",
+	"sRendererDevice": "OpenGL 2.x",
 	"sWorkingDirectory": "./",
 	"sTitle": "Using prefabs",
 	"sDescription": "How to configure and clone prefabs",
