--- a/visual/vs2012/seed/seed.vcxproj
+++ b/visual/vs2012/seed/seed.vcxproj
@@ -25,7 +25,15 @@
     <ClCompile Include="..\..\..\source\api\oal\oalSoundSource.cpp" />
     <ClCompile Include="..\..\..\source\api\oal\oalSoundSystem.cpp" />
     <ClCompile Include="..\..\..\source\api\oal\vorbis_util.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\ogl20RendererDevice.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\ogl20Shader.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\ogl20ShaderProgram.cpp" />
     <ClCompile Include="..\..\..\source\api\ogl\oglES1RendererDevice.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\oglES1Shader.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\oglES1ShaderProgram.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\oglES2RendererDevice.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\oglES2Shader.cpp" />
+    <ClCompile Include="..\..\..\source\api\ogl\oglES2ShaderProgram.cpp" />
     <ClCompile Include="..\..\..\source\api\rocket\RocketInterface.cpp" />
     <ClCompile Include="..\..\..\source\api\soil\soilTexture.cpp">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug SDL|Win32'">true</ExcludedFromBuild>
@@ -62,6 +70,7 @@
     <ClCompile Include="..\..\..\source\interface\IResource.cpp" />
     <ClCompile Include="..\..\..\source\interface\ISceneObject.cpp" />
     <ClCompile Include="..\..\..\source\interface\IScreen.cpp" />
+    <ClCompile Include="..\..\..\source\interface\IShader.cpp" />
     <ClCompile Include="..\..\..\source\interface\ISoundSource.cpp" />
     <ClCompile Include="..\..\..\source\interface\ISoundSystem.cpp" />
     <ClCompile Include="..\..\..\source\interface\ISystem.cpp" />
@@ -191,6 +200,7 @@
     <ClCompile Include="..\..\..\source\SceneNode.cpp" />
     <ClCompile Include="..\..\..\source\SceneObjectFactory.cpp" />
     <ClCompile Include="..\..\..\source\SeedInit.cpp" />
+    <ClCompile Include="..\..\..\source\ShaderManager.cpp" />
     <ClCompile Include="..\..\..\source\Sprite.cpp" />
     <ClCompile Include="..\..\..\source\Thread.cpp" />
     <ClCompile Include="..\..\..\source\ThreadManager.cpp" />
@@ -207,6 +217,14 @@
     <ClInclude Include="..\..\..\include\api\oal\oalSoundSource.h" />
     <ClInclude Include="..\..\..\include\api\oal\oalSoundSystem.h" />
     <ClInclude Include="..\..\..\include\api\oal\vorbis_util.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\ogl20RendererDevice.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\ogl20Shader.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\ogl20ShaderProgram.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\oglES1RendererDevice.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\oglES2RendererDevice.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\oglES2Shader.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\oglES2ShaderProgram.h" />
+    <ClInclude Include="..\..\..\include\api\ogl\oglHeaders.h" />
     <ClInclude Include="..\..\..\include\api\soil\soilTexture.h">
       <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug SDL|Win32'">true</ExcludedFromBuild>
     </ClInclude>
@@ -262,6 +280,7 @@
     <ClInclude Include="..\..\..\include\interface\IResource.h" />
     <ClInclude Include="..\..\..\include\interface\ISceneObject.h" />
     <ClInclude Include="..\..\..\include\interface\IScreen.h" />
+    <ClInclude Include="..\..\..\include\interface\IShader.h" />
     <ClInclude Include="..\..\..\include\interface\ISound.h" />
     <ClInclude Include="..\..\..\include\interface\ISoundSource.h" />
     <ClInclude Include="..\..\..\include\interface\ISoundSystem.h" />
@@ -435,6 +454,9 @@
     <ClInclude Include="..\..\..\include\SeedInit.h" />
     <ClInclude Include="..\..\..\include\SeedRun.h" />
     <ClInclude Include="..\..\..\include\Semaphore.h" />
+    <ClInclude Include="..\..\..\include\Shader.h" />
+    <ClInclude Include="..\..\..\include\ShaderManager.h" />
+    <ClInclude Include="..\..\..\include\ShaderProgram.h" />
     <ClInclude Include="..\..\..\include\Singleton.h" />
     <ClInclude Include="..\..\..\include\Sound.h" />
     <ClInclude Include="..\..\..\include\SoundSource.h" />
@@ -532,7 +554,7 @@
       </PrecompiledHeader>
       <WarningLevel>Level4</WarningLevel>
       <Optimization>Disabled</Optimization>
-      <PreprocessorDefinitions>_DEBUG;_LIB;BUILD_SDL2;DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_LIB;BUILD_SDL2;DEBUG;SEED_ENABLE_OGL20;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
       <DisableSpecificWarnings>4521;4275</DisableSpecificWarnings>
       <ExceptionHandling>Sync</ExceptionHandling>
