--- a/visual/vs2012/seed/seed.vcxproj.filters
+++ b/visual/vs2012/seed/seed.vcxproj.filters
@@ -294,6 +294,34 @@
     <ClCompile Include="..\..\..\source\api\soil\soilTexture.cpp">
       <Filter>api\soil</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\ogl20RendererDevice.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\ogl20Shader.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\ogl20ShaderProgram.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\oglES1Shader.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\oglES1ShaderProgram.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\oglES2RendererDevice.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\oglES2Shader.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\api\ogl\oglES2ShaderProgram.cpp">
+      <Filter>api\gl</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\interface\IShader.cpp">
+      <Filter>interface</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\source\ShaderManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\..\..\include\Container.h" />
@@ -623,6 +651,36 @@
     <ClInclude Include="..\..\..\include\api\soil\soilTexture.h">
       <Filter>api\soil</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\ogl20RendererDevice.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\ogl20Shader.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\ogl20ShaderProgram.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\oglES1RendererDevice.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\oglES2RendererDevice.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\oglES2Shader.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\oglES2ShaderProgram.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\api\ogl\oglHeaders.h">
+      <Filter>api\gl</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\interface\IShader.h">
+      <Filter>interface</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\Shader.h" />
+    <ClInclude Include="..\..\..\include\ShaderManager.h" />
+    <ClInclude Include="..\..\..\include\ShaderProgram.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\..\..\source\platform\ios\iosView.mm">
